First JPA Project nu med post

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.datasource.password=x
 
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
+
+loadunicode=true
+notloaduni=false
+
+
+
