--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,1 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/student
-spring.datasource.username=lars
-spring.datasource.password=x
-
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.show-sql=true
-
-loadunicode=true
-notloaduni=false
-
-
-
+spring.h2.console.enabled=true
